--- a/CryptoManager.WebMVC/Views/Investment/Index.cshtml
+++ b/CryptoManager.WebMVC/Views/Investment/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Investments</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("New Investment", "Create")
 </p>
 @if (TempData.ContainsKey("SaveResult"))
 {
@@ -20,39 +20,28 @@
 }
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.InvestmentId)
-        </th>
+
         <th>
             @Html.DisplayNameFor(model => model.Amount)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.CryptoId)
+            Crypto ID
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Tokens)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.InvPrice)
+            Initial Investment Price
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.OwnerId)
+            Purchase Date
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedUtc)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ModifiedUtc)
-        </th>
-        <th></th>
+        <th>Options</th>
     </tr>
 
     @foreach (var item in Model)
     {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.InvestmentId)
-            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Amount)
             </td>
@@ -66,17 +55,11 @@
                 @Html.DisplayFor(modelItem => item.InvPrice)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.OwnerId)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.CreatedUtc)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ModifiedUtc)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new {  id=item.InvestmentId }) |
-                @Html.ActionLink("Details", "Details", new { id=item.InvestmentId }) |
+                @Html.ActionLink("Buy/Sell", "Edit", new {  id=item.InvestmentId }) |
+                @Html.ActionLink("Investment Details", "Details", new { id=item.InvestmentId }) |
                 @Html.ActionLink("Delete", "Delete", new { id=item.InvestmentId })
             </td>
         </tr>
