--- a/CryptoManager.WebMVC/Views/Transaction/Delete.cshtml
+++ b/CryptoManager.WebMVC/Views/Transaction/Delete.cshtml
@@ -12,22 +12,6 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.TransactionId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TransactionId)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.OwnerId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.OwnerId)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.Amount)
         </dt>
 
@@ -36,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.CreatedUtc)
+            Transaction Date
         </dt>
 
         <dd>
@@ -50,7 +34,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to Transactions", "Index")
         </div>
     }
 </div>
