--- a/CryptoManager.WebMVC/Views/Crypto/Delete.cshtml
+++ b/CryptoManager.WebMVC/Views/Crypto/Delete.cshtml
@@ -6,21 +6,14 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Remove this Coin?</h3>
+<hr />
 <div>
-    <h4>CryptoDetail</h4>
-    <hr />
+    <h4>Details</h4>
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.CryptoId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CryptoId)
-        </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            Currency
         </dt>
 
         <dd>
@@ -49,7 +42,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Remove" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
