--- a/CryptoManager.WebMVC/Views/Transaction/Details.cshtml
+++ b/CryptoManager.WebMVC/Views/Transaction/Details.cshtml
@@ -4,26 +4,17 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
 
 <div>
-    <h4>TransactionDetail</h4>
+    <h4>Transaction Details</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.TransactionId)
+            Transaction ID
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.TransactionId)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.OwnerId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.OwnerId)
         </dd>
 
         <dt>
@@ -35,7 +26,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.CreatedUtc)
+            Transaction Date
         </dt>
 
         <dd>
@@ -45,6 +36,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.TransactionId }) |
+    @Html.ActionLink("Back to Transactions", "Index")
 </p>
